--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,19 @@
 server.port=9090
+server.ssl.enabled=false
 
 spring.flyway.locations=classpath:db/migration
 
 spring.application.name=forohub
-spring.datasource.url=jdbc:mysql://${FORO_HOST}/${FORO_BD}
-spring.datasource.username=${MYSQL_USER}
-spring.datasource.password=${MYSQL_PASSWORD}
+spring.datasource.url=jdbc:mysql://localhost:3306/forohub
+spring.datasource.username=root
+spring.datasource.password=msql2386
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.jpa.open-in-view=false
+
+
+
+#spring.datasource.url=jdbc:mysql://${FORO_HOST}/${FORO_BD}
+#spring.datasource.username=${MYSQL_USER}
+#spring.datasource.password=${MYSQL_PASSWORD}
