--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,9 +4,9 @@ server.ssl.enabled=false
 spring.flyway.locations=classpath:db/migration
 
 spring.application.name=forohub
-spring.datasource.url=jdbc:mysql://localhost:3306/forohub
-spring.datasource.username=root
-spring.datasource.password=msql2386
+spring.datasource.url=jdbc:mysql://${FORO_HOST}/${FORO_BD}
+spring.datasource.username=${MYSQL_USER}
+spring.datasource.password=${MYSQL_PASSWORD}
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
@@ -14,6 +14,8 @@ spring.jpa.open-in-view=false
 
 
 
-#spring.datasource.url=jdbc:mysql://${FORO_HOST}/${FORO_BD}
-#spring.datasource.username=${MYSQL_USER}
-#spring.datasource.password=${MYSQL_PASSWORD}
+
+
+#spring.datasource.url=jdbc:mysql://localhost:3306/forohub
+#spring.datasource.username=root
+#spring.datasource.password=msql2386
