--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,9 +18,6 @@ spring.jpa.properties.hibernate.transaction.jta.platform=org.hibernate.engine.tr
 spring.jpa.open-in-view=false
 
 
+server.error.include-stacktrace=never
 
 
-
-#spring.datasource.url=jdbc:mysql://localhost:3306/forohub
-#spring.datasource.username=root
-#spring.datasource.password=msql2386
